Gate 10L-U propagate server target set to benchmark workers